--- a/my_crud_app/templates/home.html
+++ b/my_crud_app/templates/home.html
@@ -3,28 +3,32 @@
 
 {% block content %} 
     <div class="row">
-      <div class="col-md-4 ">
-        <h3>ADD Project</h3>
+      <div class="col-12 mt-3 mb-3">
+        <h5>ADD Project</h5>
         <form id="addProject" action="">
             {% csrf_token %}
           <div class="form-group">
+            <label for="name">Name</label>
             <input class="form-control" type="text" name="name" placeholder="Name" required>
           </div>
           <div class="form-group">
+            <label for="description">Description</label>
             <input class="form-control" type="text" name="description" placeholder="Description" required>
           </div>
           <div class="form-group">
+            <label for="start_date">Start Date</label>
             <input class="form-control" type="date" name="start_date" required>
           </div>
           <div class="form-group">
+            <label for="end_date">End Date</label>
             <input class="form-control" type="date" name="end_date" required>
           </div>
           
           <button class="btn btn-primary form-control" type="submit">SUBMIT</button>
         </form>
       </div>
-      <div class="col-md-8">
-        <h3>Projects</h3>
+      <div class="col-12">
+        <h5>Projects</h5>
         <table id="projectTable" class="table table-striped">
           <tr>
             <th>Name</th>
@@ -86,7 +90,6 @@
 
 {% block javascript %}
 <script>
-
 function appendToProjectTable(project, project_details_url) {
   $("#projectTable > tbody:last-child").append(`
         <tr id="project-${project.id}">
